App_Code/TestingParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.4.1-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\HP\documents\visual studio 2013\Projects\Testing\Testing\Testing.g4 by ANTLR 4.4.1-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Testing {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.4.1-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class TestingParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, CR=9, 
		SL=10, TAB=11, WHERE=12, TYPE1=13, TYPE2=14, TYPE3=15, CONSTRAINT1=16, 
		CONSTRAINT2=17, CH=18, DF=19, INSERT=20, INTO=21, VALUES=22, FROM=23, 
		NUM=24, SC=25, REL=26, COMMA=27, A=28, ID=29, WS=30, AVG=31;
	public const int
		RULE_gram = 0, RULE_startc = 1, RULE_init = 2, RULE_drop = 3, RULE_exp = 4, 
		RULE_sel = 5, RULE_selexp = 6, RULE_colsel = 7, RULE_tabsel = 8, RULE_ins = 9, 
		RULE_insexp1 = 10, RULE_insexp2 = 11;
	public static readonly string[] ruleNames = {
		"gram", "startc", "init", "drop", "exp", "sel", "selexp", "colsel", "tabsel", 
		"ins", "insexp1", "insexp2"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'DROP'", "'''", "'*'", "'COUNT'", "'AVG'", "'MIN'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "';'", null, "','", "'MAX'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "CR", "SL", "TAB", 
		"WHERE", "TYPE1", "TYPE2", "TYPE3", "CONSTRAINT1", "CONSTRAINT2", "CH", 
		"DF", "INSERT", "INTO", "VALUES", "FROM", "NUM", "SC", "REL", "COMMA", 
		"A", "ID", "WS", "AVG"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Testing.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


	    protected const int EOF = Eof;

	public TestingParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class GramContext : ParserRuleContext {
		public StartcContext startc() {
			return GetRuleContext<StartcContext>(0);
		}
		public InitContext init(int i) {
			return GetRuleContext<InitContext>(i);
		}
		public IReadOnlyList<InitContext> init() {
			return GetRuleContexts<InitContext>();
		}
		public GramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_gram; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterGram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitGram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GramContext gram() {
		GramContext _localctx = new GramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_gram);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 25;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 24; init();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 27;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			{
			State = 29; startc();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartcContext : ParserRuleContext {
		public IReadOnlyList<SelContext> sel() {
			return GetRuleContexts<SelContext>();
		}
		public IReadOnlyList<InsContext> ins() {
			return GetRuleContexts<InsContext>();
		}
		public InitContext init(int i) {
			return GetRuleContext<InitContext>(i);
		}
		public SelContext sel(int i) {
			return GetRuleContext<SelContext>(i);
		}
		public InsContext ins(int i) {
			return GetRuleContext<InsContext>(i);
		}
		public IReadOnlyList<InitContext> init() {
			return GetRuleContexts<InitContext>();
		}
		public DropContext drop(int i) {
			return GetRuleContext<DropContext>(i);
		}
		public IReadOnlyList<DropContext> drop() {
			return GetRuleContexts<DropContext>();
		}
		public StartcContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_startc; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterStartc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitStartc(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStartc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartcContext startc() {
		StartcContext _localctx = new StartcContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_startc);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << CR) | (1L << SL) | (1L << INSERT))) != 0)) {
				{
				State = 35;
				switch (_input.La(1)) {
				case SL:
					{
					State = 31; sel();
					}
					break;
				case INSERT:
					{
					State = 32; ins();
					}
					break;
				case CR:
					{
					State = 33; init();
					}
					break;
				case T__2:
					{
					State = 34; drop();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 39;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InitContext : ParserRuleContext {
		public InitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_init; } }
	 
		public InitContext() { }
		public virtual void CopyFrom(InitContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class StartContext : InitContext {
		public ITerminalNode TAB() { return GetToken(TestingParser.TAB, 0); }
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode CR() { return GetToken(TestingParser.CR, 0); }
		public ITerminalNode SC() { return GetToken(TestingParser.SC, 0); }
		public StartContext(InitContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterStart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitStart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitContext init() {
		InitContext _localctx = new InitContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_init);
		try {
			_localctx = new StartContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 40; Match(CR);
			State = 41; Match(TAB);
			State = 42; Match(ID);
			State = 43; Match(T__0);
			State = 44; exp(0);
			State = 45; Match(T__1);
			State = 46; Match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DropContext : ParserRuleContext {
		public DropContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_drop; } }
	 
		public DropContext() { }
		public virtual void CopyFrom(DropContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DroptContext : DropContext {
		public ITerminalNode TAB() { return GetToken(TestingParser.TAB, 0); }
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode SC() { return GetToken(TestingParser.SC, 0); }
		public DroptContext(DropContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterDropt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitDropt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDropt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DropContext drop() {
		DropContext _localctx = new DropContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_drop);
		try {
			_localctx = new DroptContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; Match(T__2);
			State = 49; Match(TAB);
			State = 50; Match(ID);
			State = 51; Match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpContext : ParserRuleContext {
		public ExpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_exp; } }
	 
		public ExpContext() { }
		public virtual void CopyFrom(ExpContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Iddf3Context : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(TestingParser.ID); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode DF() { return GetToken(TestingParser.DF, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(TestingParser.ID, i);
		}
		public Iddf3Context(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIddf3(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIddf3(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIddf3(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idnc3cContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public Idnc3cContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdnc3c(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdnc3c(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdnc3c(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idc23cContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode CONSTRAINT2() { return GetToken(TestingParser.CONSTRAINT2, 0); }
		public Idc23cContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdc23c(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdc23c(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdc23c(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idc13cContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode CONSTRAINT1() { return GetToken(TestingParser.CONSTRAINT1, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public Idc13cContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdc13c(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdc13c(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdc13c(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Iddf1Context : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode DF() { return GetToken(TestingParser.DF, 0); }
		public ITerminalNode TYPE1() { return GetToken(TestingParser.TYPE1, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public Iddf1Context(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIddf1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIddf1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIddf1(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idc23aContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode A() { return GetToken(TestingParser.A, 0); }
		public ITerminalNode CONSTRAINT2() { return GetToken(TestingParser.CONSTRAINT2, 0); }
		public Idc23aContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdc23a(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdc23a(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdc23a(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Iddf2Context : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(TestingParser.ID); }
		public ITerminalNode DF() { return GetToken(TestingParser.DF, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(TestingParser.ID, i);
		}
		public ITerminalNode TYPE2() { return GetToken(TestingParser.TYPE2, 0); }
		public ITerminalNode A() { return GetToken(TestingParser.A, 0); }
		public Iddf2Context(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIddf2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIddf2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIddf2(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idc13aContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode CONSTRAINT1() { return GetToken(TestingParser.CONSTRAINT1, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode A() { return GetToken(TestingParser.A, 0); }
		public Idc13aContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdc13a(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdc13a(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdc13a(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Idch3cContext : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public IReadOnlyList<ITerminalNode> ID() { return GetTokens(TestingParser.ID); }
		public ITerminalNode TYPE3() { return GetToken(TestingParser.TYPE3, 0); }
		public ITerminalNode NUM() { return GetToken(TestingParser.NUM, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode ID(int i) {
			return GetToken(TestingParser.ID, i);
		}
		public ITerminalNode REL() { return GetToken(TestingParser.REL, 0); }
		public ITerminalNode CH() { return GetToken(TestingParser.CH, 0); }
		public Idch3cContext(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterIdch3c(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitIdch3c(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdch3c(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Ridnc2Context : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
		public ITerminalNode COMMA() { return GetToken(TestingParser.COMMA, 0); }
		public ITerminalNode TYPE2() { return GetToken(TestingParser.TYPE2, 0); }
		public ITerminalNode A() { return GetToken(TestingParser.A, 0); }
		public Ridnc2Context(ExpContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.EnterRidnc2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITestingListener typedListener = listener as ITestingListener;
			if (typedListener != null) typedListener.ExitRidnc2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITestingVisitor<TResult> typedVisitor = visitor as ITestingVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRidnc2(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Ridnc1Context : ExpContext {
		public ExpContext exp() {
			return GetRuleContext<ExpContext>(0);
		}
		public ITerminalNode ID() { return GetToken(TestingParser.ID, 0); }
